tests/pass/test_env.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

import std/env::{args, get_arg}
import std/io::{println}

fn main() -> i32 {
    auto c = args()
    println("Arg count: {}", c)
    
    auto i# = 0
    while i < c {
        auto s = get_arg(i)
        println("Arg {}: {}", i, s.c_str())
        i# = i + 1
    }
    
    return 0
}
