tests/fail/sema_move.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
shape Rect (w: i32, h: i32)

fn main() {
    auto ^r1 = new Rect(w=1, h=1)
    auto ^r2 = ^r1 // Moves r1 to r2
    
    auto x = r1.w // Error: use of moved value
    // EXPECT: error[E0438]:
}
